アコーディオン修正

--- a/app/assets/stylesheets/guest/layers/_murmur.sass
+++ b/app/assets/stylesheets/guest/layers/_murmur.sass
@@ -6,6 +6,7 @@ ul
   &_panel
     padding: 0 30px
   &_contributor, &_user
+    z-index: -1
     position: relative
     margin-top: 20px
     display: flex
