--- a/app/assets/stylesheets/guest/modules/_panel.sass
+++ b/app/assets/stylesheets/guest/modules/_panel.sass
@@ -7,6 +7,10 @@
       width: 100%
     +responsive(smartphone)
       padding: 0 5%
+  &_like_section
+    @extend .panelList_section
+    +responsive(smartphone)
+      padding: 0
   &_search_button
     margin-bottom: 20px
   &_community_section
