--- a/app/assets/stylesheets/guest/modules/_tab.sass
+++ b/app/assets/stylesheets/guest/modules/_tab.sass
@@ -3,6 +3,8 @@
     padding: 20px 0
     display: flex
     justify-content: space-between
+    +responsive(smartphone)
+      padding: 10px 0
     .select
       background: $red
   &_bottun
@@ -13,6 +15,10 @@
     font-size: 22px
     padding: 15px
     border-radius: 10px
+    +responsive(smartphone)
+      font-size: 16px
+      padding: 5px
+      border-radius: 5px
     &:hover
       text-decoration: none
       background: $red
