--- a/app/views/guest/messages/index.html.slim
+++ b/app/views/guest/messages/index.html.slim
@@ -1,4 +1,4 @@
-.panelList_section
+.panelList_like_section
   .tab_header
     = link_to 'お相手からのイイね', likes_path, class: 'tab_bottun'
     .tab_select_button マッチングメール
@@ -35,5 +35,5 @@
             = f.hidden_field :partnership_id, value: @partnerships.first.id
             = f.hidden_field :sender_id, value: current_user.id
             = f.submit "送信", :class => "btn btn-danger pull-right", data: { disable_with: "送信中..." }
-      = paginate @messages
+        = paginate @messages
 
