--- a/app/views/guest/searches/index.html.slim
+++ b/app/views/guest/searches/index.html.slim
@@ -12,6 +12,7 @@
     - @users.each do |user|
       .card_content
         .card_image
+          / 画像サイズきめた後、size:100%に変更。
           = link_to image_tag(user.user_profile.image1, width: '100%', height: '240px', class: 'img-radius'), search_path(user)
           .card_info
             .card_age = "#{user.user_profile.age}歳"
