--- a/app/views/partial/_navbar.html.slim
+++ b/app/views/partial/_navbar.html.slim
@@ -14,7 +14,7 @@ nav.navbar.navbar-default
         - if (!user_signed_in?)
           li
             a[href="#"]
-              | シッターになる
+              | シッターになるか
           li
             a[href="#"]
               | 利用の流れ
@@ -23,18 +23,18 @@ nav.navbar.navbar-default
           li
             = link_to "ログイン", new_user_session_path
         - else
-          li.dropdown
-            a.dropdown-toggle[href="#" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"]
-              - if current_user.provider
-                = image_tag current_user.image, class: "img-circle profile-0"
-                = current_user.name
-              - else
-                = current_user.email
-              span.caret
-            ul.dropdown-menu
-              li
-                = link_to "プロフィール", user_path(current_user)
-              li
-                = link_to "プロフィール編集", edit_user_registration_path
-              li
-                = link_to "ログアウト", destroy_user_session_path, method: :delete
+          / li.dropdown
+          /   a.dropdown-toggle[href="#" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"]
+          /     - if current_user.provider
+          /       = image_tag current_user.image, class: "img-circle profile-0"
+          /       = current_user.name
+          /     - else
+          /       = current_user.email
+          /     span.caret
+          /   ul.dropdown-menu
+          /     li
+          /       = link_to "プロフィール", user_path(current_user)
+          /     li
+          /       = link_to "プロフィール編集", edit_user_registration_path
+          /     li
+          /       = link_to "ログアウト", destroy_user_session_path, method: :delete
