リンクボタンの色修正

--- a/app/assets/stylesheets/guest/layers/_like.sass
+++ b/app/assets/stylesheets/guest/layers/_like.sass
@@ -6,6 +6,12 @@
     margin: 10px 20px
     width: 46%
     position: relative
+    a
+      color: $link-color
+      text-decoration: none
+      &:hover
+        color: $link-hover-color
+        text-decoration: underline
 
 
 
@@ -72,6 +78,7 @@
     &:hover
       background-color: $label-red
     a
+      color: $white
       display: block
       padding: 8px
       width: 100%
