--- a/app/assets/stylesheets/guest/layers/_search.sass
+++ b/app/assets/stylesheets/guest/layers/_search.sass
@@ -56,6 +56,7 @@
       padding: 8px
       width: 100%
       text-decoration: none
+      color: $white
       &:hover
         color: $white
         text-decoration: none
