--- a/app/assets/stylesheets/guest/modules/_tab.sass
+++ b/app/assets/stylesheets/guest/modules/_tab.sass
@@ -7,6 +7,12 @@
       padding: 10px 0
     .select
       background: $red
+    a
+      color: $white
+      text-decoration: none
+      &:hover
+        color: $white
+        text-decoration: none
   &_bottun
     width: 48%
     text-align: center
