--- a/app/assets/stylesheets/guest/_settings.sass
+++ b/app/assets/stylesheets/guest/_settings.sass
@@ -36,15 +36,15 @@ $warning: #f0ad4e
 
 $pagenation: #5CC3CF
 
-$link-color       : #FF2D55
-$link-hover-color : darken($link-color, 10%)
-
 $label-color: darken($light-gray, 50%)
 
 $text-color           : #555
 $text-color-sub       : #777
 $text-headline-color  : #222
 $text-copyright-color : #222
+
+$link-color       : $text-color
+$link-hover-color : darken($link-color, 10%)
 
 $sns-line:      #5ae628
 $sns-google:    #db4a39
