TOPレイアウト・favicon

--- a/app/views/guest/pages/index.html.slim
+++ b/app/views/guest/pages/index.html.slim
@@ -27,4 +27,9 @@
           small
             | >facebookには一切投稿されません
           = link_to "メールアドレスで登録", new_user_registration_path, class: 'registration_button'
+  .continer
+    .row
+      h2 簡単使い方説明 - マッチング編
+    .row
+      h2 プレミアム会員料金説明
 
