--- a/app/views/guest/messages/index.html.slim
+++ b/app/views/guest/messages/index.html.slim
@@ -28,7 +28,7 @@
       #layout_message
         .message_container
           - if @messages
-            - @messages.each do |m|
+            - @messages.reverse.each do |m|
               - if m.sender_id == current_user.id
                 .message_card_right =  m.body
               - else
@@ -40,5 +40,5 @@
               = f.hidden_field :partnership_id, value: @partnerships.first.id
               = f.hidden_field :sender_id, value: current_user.id
               = f.submit "送信", :class => "btn btn-danger pull-right", data: { disable_with: "送信中..." }
-          = paginate @messages if @messages
+          / = paginate @messages if @messages
 
