スマホのお相手プロフィールデザイン修正

--- a/app/assets/stylesheets/guest/layers/_preview.sass
+++ b/app/assets/stylesheets/guest/layers/_preview.sass
@@ -6,10 +6,7 @@
   .main
     margin-bottom: 30px
   .main li
-    width: 400px
-    height: 400px
-    overflow: hidden
-    +responsive(smartphone)
+    img
       width: 100%
   .main li.item2, .main li.item3, .main li.item4
     display: none
