--- a/app/assets/stylesheets/guest/_style.sass
+++ b/app/assets/stylesheets/guest/_style.sass
@@ -63,6 +63,7 @@ a
     @media (max-width: $screen-max-tablet)
       width: 100%
       margin-bottom: 20px
+      padding: 0 20px
   &_right
     @media (min-width: $screen-max-tablet)
       // float: left
