--- a/app/assets/stylesheets/guest/modules/_tab.sass
+++ b/app/assets/stylesheets/guest/modules/_tab.sass
@@ -22,9 +22,10 @@
     padding: 15px
     border-radius: 10px
     +responsive(smartphone)
+      width: 50%
       font-size: 16px
       padding: 5px
-      border-radius: 5px
+      border-radius: 1px
     &:hover
       text-decoration: none
       background: $red
