--- a/app/views/guest/communities/index.html.slim
+++ b/app/views/guest/communities/index.html.slim
@@ -1,4 +1,4 @@
-.panelList_section
+.panelList_like_section
   .panelList_search_button.text-right
     button.btn.btn-danger[type="button" data-toggle="modal" data-target="#sampleModal"]
       |  コミュニティ作成
@@ -24,8 +24,8 @@
       .community_ranking
         h5 人気コミュニティ
         - @pickup_communities.each do |community|
-          = link_to detail_community_path(community) do
-            .community_content
+          .community_content
+            = link_to detail_community_path(community) do
               .community_image
                 = image_tag community.image, size: '180', class: 'img-radius'
               .community_body
@@ -38,8 +38,8 @@
       .community_list
         h5 = 'コミュニティ一覧'
         - @communities.each do |community|
-          = link_to detail_community_path(community) do
-            .community_content
+          .community_content
+            = link_to detail_community_path(community) do
               .community_image
                 = image_tag community.image, size: '180', class: 'img-radius'
               .community_body
