つぶやきスマホデザイン追加

--- a/app/assets/stylesheets/guest/layers/_mypage.sass
+++ b/app/assets/stylesheets/guest/layers/_mypage.sass
@@ -37,6 +37,8 @@
       float: right
   &_profile_body
     padding: 10px
+    +responsive(smartphone)
+      padding: 0
   &_user_communities
     .img-radius
       border: 2px solid $red
