--- a/app/assets/stylesheets/guest/_style.sass
+++ b/app/assets/stylesheets/guest/_style.sass
@@ -29,6 +29,8 @@ a
     @extend %container
     position: relative
     margin: 0 auto
+    +responsive(smartphone)
+      fond-size: 10px
   &_header
     position: absolute
     top: 0
