--- a/app/assets/stylesheets/guest/layers/_murmur.sass
+++ b/app/assets/stylesheets/guest/layers/_murmur.sass
@@ -1,16 +1,21 @@
 ul
   padding: 0
 .murmur
-  &_container
-    height: 300px
   &_panel
     padding: 0 30px
+    +responsive(smartphone)
+      padding: 0
+      font-size: 10px
+  &_container
+    height: 300px
   &_contributor, &_user
     position: relative
     margin-top: 20px
     display: flex
   &_user
     margin-top: 0
+    +responsive(smartphone)
+      display: none
   &_datetime
     position: absolute
     bottom: 15%
@@ -19,8 +24,8 @@ ul
     position: absolute
     bottom: 10%
     left: 30%
-  &_panel_body, &_panel_footer
-    padding-top: 20px
+  &_panel_body
+    padding: 20px 10px
   &_panel_footer
     display: flex
     justify-content: space-between
@@ -28,6 +33,9 @@ ul
     line-height: 3
   &_image
     margin-top: 10px
+  &_smile
+    img
+      width: 30%
 
 
 
