マイページスマホデザイン追加

--- a/app/assets/stylesheets/guest/_style.sass
+++ b/app/assets/stylesheets/guest/_style.sass
@@ -74,6 +74,7 @@ a
     @media (max-width: $screen-max-tablet)
       width: 100%
       margin: 0 0 10px
+      font-size: 10px
   &_message
     @media (min-width: $screen-max-tablet)
       // float: left
