--- a/app/assets/stylesheets/guest/layers/_murmur.sass
+++ b/app/assets/stylesheets/guest/layers/_murmur.sass
@@ -33,6 +33,9 @@ ul
     line-height: 3
   &_image
     margin-top: 10px
+    width: 100%
+    img
+      width: 100%
   &_smile
     img
       width: 30%
