--- a/app/views/guest/murmurs/_murmur.html.slim
+++ b/app/views/guest/murmurs/_murmur.html.slim
@@ -14,7 +14,7 @@ section.murmur_panel
     - if murmur.image?
       / TODO namba 画像サイズ決定後width:100%に修正
       .murmur_image
-        = image_tag murmur.image, width: '500'
+        = image_tag murmur.image
   .murmur_panel_footer
     .murmur_smile
       = image_tag 'smile'
