--- a/app/views/guest/users/show.html.slim
+++ b/app/views/guest/users/show.html.slim
@@ -7,7 +7,8 @@
 
     / TODO: ゲージ作成
     .mypage_gage_panel
-      .mypage_gage_title = 'プロフィール入力率'
+      .mypage_gage_title = "プロフィール入力率"
+      / .mypage_gage_percent = "#{@percent}%"
       .mypage_gage_bar.w3-border.w3-round-large
         .progressbar.w3-round-large style="height:18px; width:#{@percent}%"
       .mypage_gage_percent = "#{@percent}%"
@@ -21,7 +22,8 @@
       .mypage_profile_body
         .mypage_user_communities
           - @user.my_community.limit(10).each do |community|
-            = image_tag community.image, class: 'img-radius', size: '100'
+            .mypage_user_community
+              = image_tag community.image, class: 'img-radius'
 
         .collapse id="Mycommunities"
           .mypage_user_communities
