planメニュー変更

--- a/app/assets/stylesheets/guest/layers/_murmur.sass
+++ b/app/assets/stylesheets/guest/layers/_murmur.sass
@@ -20,6 +20,9 @@ ul
     position: absolute
     bottom: 15%
     left: 23%
+    +responsive(smartphone)
+      bottom: 0
+      left: 30%
   &_user_murmurList
     position: absolute
     bottom: 10%
