--- a/app/assets/stylesheets/guest/layers/_sidebar.sass
+++ b/app/assets/stylesheets/guest/layers/_sidebar.sass
@@ -81,6 +81,7 @@
     +responsive(smartphone)
       width: 100%
       height: 140px
+      padding: 15px 5px
     &_section
       position: relative
       background-color: $white
@@ -89,6 +90,7 @@
       border-radius: 5px
       +responsive(smartphone)
         height: 110px
+        width: 33%
       .status_title
         padding: 5px
         color: $white
@@ -124,7 +126,10 @@
           border-radius: 5px
           padding: 3px 10px
           +responsive(smartphone)
-            padding: 5px
+            padding: 5px 0
+            width: 96%
+            left: 2%
+
 
 
 
