--- a/app/views/guest/users/_sidebar.html.slim
+++ b/app/views/guest/users/_sidebar.html.slim
@@ -31,7 +31,7 @@
     / ユーザーステータス
     .sidebar_status
       .sidebar_status_section
-        .status_title_plan = '会員ステータス'
+        .status_title_plan = 'ステータス'
         .status_body_plan
           = '無料会員'
           br
