--- a/app/assets/stylesheets/guest/layers/_community.sass
+++ b/app/assets/stylesheets/guest/layers/_community.sass
@@ -8,7 +8,7 @@
     clear: both
   &_content
     float: left
-    width: 180px
+    width: 100px
     margin: 0px 12px
     border-radius: 10px
     +responsive(smartphone)
@@ -45,9 +45,12 @@
   &_detail
     display: flex
     // justify-content: space-between
+    &_content
+      @extend .community_content
     &_image
-      width: 300px
-      height: 300px
+      width: 30%
+    &_body
+      width: 70%
     .img-radius
       border-radius: 15px
     &_body
