--- a/app/views/guest/murmurs/_modal.html.slim
+++ b/app/views/guest/murmurs/_modal.html.slim
@@ -40,3 +40,25 @@
                   = f.hidden_field :user_id, value: current_user.id
                   = f.hidden_field :murmur_id, value: murmur.id
                 = f.submit '保存', class: "btn btn-info"
+
+#sampleModal.modal.fade[tabindex="-1"]
+  .modal-dialog
+    .modal-margin
+      .modal-content
+        .modal-header
+          button.close[type="button" data-dismiss="modal"]
+            span
+              | ×
+          / h3.modal-title
+          /   | 検索
+        .modal-body
+          = form_for(@murmur) do |f|
+            .row
+              .col-md-12.text-center
+                .form-group
+                  = f.label :body
+                  = f.text_area :body, class: 'form-control'
+
+                = f.hidden_field :user_id, value: current_user.id
+
+                = f.submit '保存', class: "btn btn-info text-center"
