--- a/app/views/guest/murmurs/index.html.slim
+++ b/app/views/guest/murmurs/index.html.slim
@@ -6,6 +6,7 @@
     .mypage_profile_section
       .mypage_profile_label
         .edit_title = 'みんなの投稿'
-        .edit_button = link_to '投稿する',new_murmur_path, class: 'btn btn-danger'
+        button.edit_button.btn.btn-danger[type="button" data-toggle="modal" data-target="#sampleModal"]
+          |  投稿
       .mypage_profile_body
         = render @murmurs
