--- a/app/views/guest/murmurs/index.html.slim
+++ b/app/views/guest/murmurs/index.html.slim
@@ -8,5 +8,8 @@
         .edit_title = 'みんなの投稿'
         button.edit_button.btn.btn-danger[type="button" data-toggle="modal" data-target="#sampleModal"]
           |  投稿
+
+        = render 'guest/murmurs/form_modal'
+
       .mypage_profile_body
         = render @murmurs
