--- a/app/views/guest/users/_modal.html.slim
+++ b/app/views/guest/users/_modal.html.slim
@@ -12,7 +12,7 @@
             .row
               .col-md-12.text-center
                 .form-group
-                  = f.text_area :introduce, :size => "60x10", class: 'form-control'
+                  = f.text_area :introduce, :size => "60x10", class: 'form-control', autofocus: true
                 = f.submit '保存', class: "btn btn-info text-center"
 
 
