--- a/app/views/guest/messages/index.html.slim
+++ b/app/views/guest/messages/index.html.slim
@@ -20,9 +20,10 @@
                     .panel_address = partner.user_profile.prefecture.name
                   .panel_day = '2017年4月26日'
                 .panel_body
-                  / 最新のメッセージを表示させる or まだメッセージはありません
-                  p まだメッセージはありません
-                  / = truncate(partner.user_profile.introduce, omission: '・・・', length: 50)
+                  - if message = Message.where(partnership_id: partnership.id).last
+                    = message.body
+                  - else
+                    p まだメッセージはありません
             .panel_bottun = link_to 'チャットする', message_path(id: partnership.id, partner_id: partner.id), method: :get
         / = paginate @partnerships
 
