--- a/app/views/guest/_button_link.html.slim
+++ b/app/views/guest/_button_link.html.slim
@@ -5,10 +5,10 @@
     .like_button = link_to 'イイね', likes_path(id: current_user, target: @user), method: :post
 
 - if controller_name == 'likes'
-  = link_to 'ありがとう', match_like_path(id: @user, target: current_user)
+  .like_button = link_to 'ありがとう', match_like_path(id: @user, target: current_user)
 
 - if controller_name == 'messages'
-  = link_to 'メッセージを送る', messages_path(id: @user, target: current_user), method: :post
+  .like_button = link_to 'メッセージを送る', message_path(id: @partnership, partner_id: @partner), method: :get
   /  = link_to 'イイね', likes_path(id: @user.id, target: current_user), method: :post
   / - else
   /  = 'イイね済み'
