一旦_TopContent/regist_after_modal

--- a/app/views/guest/pages/index.html.slim
+++ b/app/views/guest/pages/index.html.slim
@@ -30,6 +30,11 @@
   .continer
     .row
       h2 簡単使い方説明 - マッチング編
+      = image_tag 'top_howto_match_pc'
+    br
+    br
     .row
-      h2 プレミアム会員料金説明
+      = image_tag 'top_prem_explane_title_pc'
+      = image_tag 'top_price_pc'
+
 
