--- a/app/assets/stylesheets/guest/layers/_preview.sass
+++ b/app/assets/stylesheets/guest/layers/_preview.sass
@@ -4,6 +4,7 @@
     padding: 0
     list-style: none
   .main
+    position: relative
     margin-bottom: 30px
   .main li
     img
@@ -14,6 +15,12 @@
     opacity: 0.8
     filter: alpha(opacity=80)
     -ms-filter: "alpha(opacity=80)"
+  .item_badge
+    position: absolute
+    top: 10px
+    right: 10px
+    img
+      width: 50px
   .thumb, .thumb li
     width: 100%
     height: auto
