--- a/app/views/guest/topics/_topic.html.slim
+++ b/app/views/guest/topics/_topic.html.slim
@@ -16,8 +16,12 @@ section.murmur_panel
     = topic.body
   .murmur_panel_footer
     .murmur_smile
-      = image_tag 'smile', width: '50'
-      = '超スマイル'
+      - if TopicSmile.find_by(user: current_user, topic: topic)
+        / スマイルの画像をグレーに変える
+        = link_to image_tag('smile'), topic_smile_path(id: topic, user: current_user), method: :delete
+      - else
+        = link_to image_tag('smile'), topic_smiles_path(user: current_user, topic: topic), method: :post
+      = topic.smiles.size
     .murmur_items
       - if current_user == topic.writer
         button.edit_button.btn.btn-danger[type="button" data-toggle="modal" data-target="#EditModal#{topic.id}"]
