モーダル修正

--- a/app/assets/stylesheets/guest/layers/_murmur.sass
+++ b/app/assets/stylesheets/guest/layers/_murmur.sass
@@ -18,8 +18,8 @@ ul
       display: none
   &_datetime
     position: absolute
-    bottom: 15%
-    left: 23%
+    top: 70%
+    left: 26%
     +responsive(smartphone)
       bottom: 0
       left: 30%
