--- a/app/assets/stylesheets/guest/layers/_murmur.sass
+++ b/app/assets/stylesheets/guest/layers/_murmur.sass
@@ -6,6 +6,9 @@ ul
     +responsive(smartphone)
       padding: 0
       font-size: 10px
+    .img-radius
+      border-radius: 10px
+      margin-bottom: 0
   &_container
     height: 300px
   &_contributor, &_user
@@ -16,6 +19,9 @@ ul
     margin-top: 0
     +responsive(smartphone)
       display: none
+    .img-radius
+      border-radius: 10px
+      margin-bottom: 0
   &_datetime
     position: absolute
     top: 70%
