--- a/app/views/guest/communities/show.html.slim
+++ b/app/views/guest/communities/show.html.slim
@@ -16,7 +16,10 @@
         = link_to search_path(user) do
           .community_content_detail
             .community_image
-              = image_tag user.user_profile.image1, size: '70', class: 'img-radius'
+              - if user.user_profile.image1.blank?
+                = image_tag 'default', size: '70', class: "img-radius"
+              - else
+                = image_tag user.user_profile.image1, size: '70', class: 'img-radius'
 
 
   #layout_right
