--- a/app/views/guest/users/welcome.html.erb
+++ b/app/views/guest/users/welcome.html.erb
@@ -1,13 +1,10 @@
 <div class="modal" id="welcome-modal" tabindex="-1" style="display: block;">
   <div class="modal-dialog">
     <div class="modal-margin">
-      <div class="modal-content">
-        <div class="modal-body"> 
-          <h1>ようこそLemonへ</h1>
-
-          <p>宜しくお願いいたします</p>
-          <button id="button">Close</button>
-        </div>
+      <div id="full">
+        <%= image_tag("tutorial_1.png") %>
+        <%= image_tag("tutorial_2.png") %>
+        <%= image_tag("tutorial_3.png") %>
       </div>
     </div>
   </div>
@@ -19,6 +16,16 @@
           document.getElementById('welcome-modal').style.display = "none"
       };
   };
+
+  $(function () {
+    $('#full img').click(function() {
+      $(this).fadeOut('fast', function() {
+        $(this).next('img').fadeIn();
+        // 最後尾に移動
+        $('#full').append(this);
+      });
+    });
+  });
 </script>
 
 <!-- window.onload = function(){
