--- a/app/views/guest/users/_profile_modal.html.slim
+++ b/app/views/guest/users/_profile_modal.html.slim
@@ -40,15 +40,15 @@
                   = f.select :play_style, UserProfile::PLAY_STYLE, {prompt:"選択してください"}, {required: 'true', class: 'form-control'}
               .col-md-12.select
                 .form-group
-                  label
-                    | 生年月日
-/*                  == sprintf( f.date_select(
-                    - :birthday,
-                    - use_month_numbers: true,
-                    - start_year: 1930,
-                    - end_year:   (Time.now.year - 18),
-                    - default:    Date.new(1980, 1, 1),
-                    - date_separator: '%s', datetime_separator: '%s' ), '年', '月') + '日'*/
+                  / label
+                  /   | 生年月日
+                  / == sprintf( f.date_select(
+                  /   - :birthday,
+                  /   - use_month_numbers: true,
+                  /   - start_year: 1930,
+                  /   - end_year:   (Time.now.year - 18),
+                  /   - default:    Date.new(1980, 1, 1),
+                  /   - date_separator: '%s', datetime_separator: '%s' ), '年', '月') + '日'
 
               .col-md-12.select
                 .form-group
@@ -239,4 +239,4 @@
                 = f.file_field :image1, class: "form-control image-field", :style => "display: none;", :id => "user_aaa", :style => "display: none;", :id => "user_aaa"
                 = f.label :image1, id: "aaa" do
                   = image_tag @user.user_profile.image1, class: "imgView img-radius img-responsive"
-                = f.submit "プロフィールを更新", :class => "btn btn-info"
+                = f.submit "画像変更", :class => "btn btn-info"
