profile項目の変更。画像uploadサイズ固定

--- a/app/views/guest/pages/index.html.slim
+++ b/app/views/guest/pages/index.html.slim
@@ -28,12 +28,13 @@
             | >facebookには一切投稿されません
           = link_to "メールアドレスで登録", new_user_registration_path, class: 'registration_button'
   .continer
-    .row
+    .col-md-12
+      /*ここ画像作成中*/
       h2 簡単使い方説明 - マッチング編
       = image_tag 'top_howto_match_pc'
     br
     br
-    .row
+    .col-md-12
       = image_tag 'top_prem_explane_title_pc'
       = image_tag 'top_price_pc'
 
