--- a/app/views/guest/users/welcome.html.erb
+++ b/app/views/guest/users/welcome.html.erb
@@ -4,7 +4,7 @@
       <div id="full">
         <%= image_tag("tutorial_1.png") %>
         <%= image_tag("tutorial_2.png") %>
-        <%= image_tag("tutorial_3.png") %>
+        <%= link_to image_tag("tutorial_3.png"), user_path(current_user) %>
       </div>
     </div>
   </div>
