--- a/app/views/guest/pages/index.html.slim
+++ b/app/views/guest/pages/index.html.slim
@@ -28,14 +28,8 @@
             | >facebookには一切投稿されません
           = link_to "メールアドレスで登録", new_user_registration_path, class: 'registration_button'
   .continer
-    .col-md-12
-      /*ここ画像作成中*/
+    .row
       h2 簡単使い方説明 - マッチング編
-      = image_tag 'top_howto_match_pc'
-    br
-    br
-    .col-md-12
-      = image_tag 'top_prem_explane_title_pc'
-      = image_tag 'top_price_pc'
-
+    .row
+      h2 プレミアム会員料金説明
 
